# GP14-26

./: .commitlintrc.json  .env  .env.example  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.json  Azure Appinsights.txt  CODEOWNER  Deep search AQI.txt  Directory.Build.props  MakeFile  README.md  Start-ai.ps1  commands.txt  start-ai.bat  start-local-dev.ps1  structure.txt  test.py
apps/ai/: .env  .env.example  Dockerfile  README.md  auto-cmd.txt  benchmark_model.py  commands.txt  export_model.py  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-gpu.txt  requirements-old-prod.txt  requirements.in  requirements.txt  requirements_v2.txt  smart_gate.rar  structure.txt  train_model.py  validate_model.py
apps/ai/scripts/: download_dataset.py  monitor_training.py
apps/ai/smart_gate/: config.py  face_recognition_system.py  requirements.txt
apps/ai/smart_gate/camera/: frame_utils.py  motion_detector.py  stream.py
apps/ai/smart_gate/database/: db_manager.py  schema.sql
apps/ai/smart_gate/face_processing/: facenet_encoder.py  mtcnn_detector.py
apps/ai/smart_gate/utills/: preprocessing.py  similarity.py
apps/ai/src/api/: main.py
apps/ai/src/api/grpc/: server.py
apps/ai/src/api/lifespan/: __init__.py  base.py  health_registry.py  manager.py  registry.py
apps/ai/src/api/metrics/: registry.py
apps/ai/src/application/: detction_app.py
apps/ai/src/core/: config.py  container.py  exceptions.py  logging.py
apps/ai/src/schemas/: base.py  detection.py
apps/ai/src/utils/: yolo_safe_loader.py
apps/ai/tests/: test_health.py
(+388 files in other folders)
